--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,11 @@
 -e git+https://github.com/Dan-org/Discourse.git#egg=discourse
 wsgiref==0.1.2
 
+
 django-ttag         # to support template tags in content_tags
 
-jsonfield==0.9.2
-django_compressor
--e git://github.com/Kronuz/pyScss.git@d01e36a189d183b3384824cb1dbd046bbc0ba532#egg=pyScss-dev
-BeautifulSoup       # For Django Compressor
+# don't use pyamf because it doesn't work with Django 1.6 yet, so use our custom repository
+-e git+https://github.com/easterday/pyamf.git#egg=pyamf
 
-# Custom yamlfield to take care of the security vulnerabilities of YAML
--e git+https://github.com/DeadWisdom/django-yamlfield.git#egg=yamlfield
-
-pyyaml
 
 
